[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["João Pedro Finoto <jp@finoto.dev>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
pico-args = "0.5.0"
regex = "1.10.2"
lazy_static = "1.4.0"
rayon = "1.8.0"
tqdm = "0.6.0"
sdl2 = { version = "0.36.0", features = ["bundled"] }
pathfinding = "4.6.0"
